seperate the code seperately by frontend backend folders

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -19,6 +19,8 @@
       }
     ],
     "paths": {
+      "@/frontend/*": ["./src/frontend/*"],
+      "@/backend/*": ["./src/backend/*"],
       "@/*": ["./src/*"]
     }
   },
