--- a/tsconfig.json
+++ b/tsconfig.json
@@ -19,8 +19,8 @@
       }
     ],
     "paths": {
-      "@/frontend/*": ["./src/frontend/*"],
       "@/backend/*": ["./src/backend/*"],
+      "@/ai/*": ["./src/backend/*"],
       "@/*": ["./src/*"]
     }
   },
