--- a/package.json
+++ b/package.json
@@ -1,4 +1,3 @@
-
 {
   "name": "nextn",
   "version": "0.1.0",
@@ -8,6 +7,7 @@
     "genkit:dev": "genkit start -- tsx src/backend/dev.ts",
     "genkit:watch": "genkit start -- tsx --watch src/backend/dev.ts",
     "build": "next build",
+    "vercel-build": "next build",
     "start": "next start",
     "lint": "next lint",
     "typecheck": "tsc --noEmit"
