--- a/.env
+++ b/.env
@@ -1,9 +1,17 @@
-
+# 🔥 FIREBASE CONFIG
 NEXT_PUBLIC_FIREBASE_API_KEY=your-api-key
 NEXT_PUBLIC_FIREBASE_AUTH_DOMAIN=your-auth-domain
 NEXT_PUBLIC_FIREBASE_PROJECT_ID=your-project-id
 NEXT_PUBLIC_FIREBASE_STORAGE_BUCKET=your-storage-bucket
 NEXT_PUBLIC_FIREBASE_MESSAGING_SENDER_ID=your-messaging-sender-id
 NEXT_PUBLIC_FIREBASE_APP_ID=your-app-id
-GEMINI_API_KEY=AIzaSyClItNCt98Rft8vmNX5Ua4JXBjMUFxoVJM
+
+# 🤖 GOOGLE GEMINI API KEY
+GEMINI_API_KEY=AIzaSyCLlINTc98Rf8twMNSUa4JXBjMUFxoVJM
+
+# 🌐 SOLANA CONFIG
 NEXT_PUBLIC_SOLANA_CLUSTER=devnet
+
+# 🔗 BLOCKCHAIN / ETHEREUM CONFIG
+NEXT_PUBLIC_RPC_URL=https://sepolia.infura.io/v3/36e803193c244c3ea186243511923aff
+NEXT_PUBLIC_CONTRACT_ADDRESS=0x0AE8070d9Fa943174ea299585df459388DBbaa7A
